* Added #endif comments.
* Moved Vector3 class to SphereSim namespace.
* Switched to -O2 and enabled OpenMP.
* Removed Server autostart and added exit on error to ActionSender.
* Improved data initializing on connecting.
* Replaced Qt networking by nanomsg.
* Switched to per-sphere frame sending.
* Improved simulation systems.
* Added nanomsg install to .travis.yml file.
* Added nanomsg library to QMake build files.
* Fixed nanomsg library in QMake build files.
* Added nanomsg dependencies to PKGBUILD files.
* Added clean tear-down and start-up to Server.
* Added frame counter to Server.
* Improved Viewer and Server communication.
* Removed unused includes.
* Fixed frame counting in ActionSender.
* Fixed message encoding.
* Fixed connection issues.
* Added heartbeat sending to clients.

SphereSim 3.0.3:
* Removed custom Array class, replaced by std::vector.
* Improved coding style.
* Removed empty SimulatedSystemActions.
* Fixed small error.
* Switched to spaces indentation.
* Added exception handling to main functions.
* Updated readme file.
* Updated git repo link in PKGBUILDs and fixed version.
* Replaced QList by std::vector and std::list.
* Updated ActionServer and ActionSender to use C string address parameter.
* Updated local includes to use double quotes.
* Replaced Qt integral types by standard types.
* Replaced QByteArray by std::string.
* Moved SphereTransmit functions to its own source file.
* Updated Object class to use SphereTransmit functions.
* Renamed SphereTransmit to DataTransmit.
* Moved message encapsulation and encoding to MessageTransmitter class.
* Improved exception handling.
* Switched to custom hexadecimal message encoding.
* Removed QStringList occurrences.
* Removed unused include files.
* Improved Console to use mutex locked std::cout output.
* Moved Console code from header to source file.
* Improved way of setting console color.
* Improved code style.
* Improved console output and removed QDebug occurrences.